--- a/css/propos.css
+++ b/css/propos.css
@@ -1,2 +1,816 @@
+body {
+  font-family: "Poppins", sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+.No-mission {
+  font-family: "Poppins", sans-serif;
+  padding: 10px;
+  justify-content: center;
+}
+
+.No-mission__container {
+  display: grid;
+  grid-template-columns: 45% 45%;
+  grid-template-rows: 10% 90%;
+  box-sizing: border-box;
+  justify-content: center;
+}
+
+.No-mission__container--title {
+  grid-column: 1;
+  grid-row: 1;
+  color: #4E6A68;
+  font-size: 40px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 0;
+}
+
+.No-mission__container--title::after {
+  content: "";
+  flex: 20% 0;
+  border-bottom: 6px solid #4E6A68;
+  margin-left: 20px;
+  margin-top: 24px;
+  margin-bottom: auto;
+}
+
+.No-mission__container--description {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.No-mission__container--description p {
+  max-width: 90%;
+  font-size: 18px;
+  line-height: 1.6em;
+  margin-top: 8%;
+}
+
+.No-mission__container--vid {
+  grid-column: 2;
+  grid-row: 1/3;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Team {
+  background-color: #D0DDD5;
+  padding: 20px;
+}
+
+.Team__title {
+  text-align: center;
+  color: #FFFFFF;
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.Team__title::before {
+  content: "";
+  flex: 8% 0;
+  border-bottom: 6px solid #FFFFFF;
+  margin-right: 30px;
+  margin-top: 23px;
+  margin-bottom: auto;
+}
+
+.Team__title::after {
+  content: "";
+  flex: 8% 0;
+  border-bottom: 6px solid #FFFFFF;
+  margin-left: 30px;
+  margin-top: 24px;
+  margin-bottom: auto;
+}
+
+.Team__container {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  grid-template-rows: repeat(2, 1fr);
+  justify-content: center;
+  margin-top: 13%;
+}
+
+.Team__container--member-1 {
+  border: 2px solid #707070;
+  background-color: #FFFFFF;
+  width: 60%;
+  height: 313px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.Team__container--member-1 img {
+  position: absolute;
+  top: -100px;
+  left: 33px;
+  width: 75%;
+}
+
+.Team__container--member-1 p {
+  position: relative;
+  bottom: -122px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.Team__container--member-1 div {
+  position: relative;
+  border: 1px solid #707070;
+  border-top: 2px solid #707070;
+  height: 50px;
+  bottom: -142px;
+  background-color: #D0DDD5;
+  text-align: center;
+  padding-top: 12px;
+  font-weight: bolder;
+  color: #678372;
+  font-size: x-large;
+}
+
+.Team__container--member-2 {
+  border: 2px solid #707070;
+  background-color: #FFFFFF;
+  width: 60%;
+  height: 313px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.Team__container--member-2 img {
+  position: absolute;
+  top: -100px;
+  left: 33px;
+  width: 75%;
+}
+
+.Team__container--member-2 p {
+  position: relative;
+  bottom: -122px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.Team__container--member-2 div {
+  position: relative;
+  border: 1px solid #707070;
+  border-top: 2px solid #707070;
+  height: 50px;
+  bottom: -142px;
+  background-color: #D0DDD5;
+  text-align: center;
+  padding-top: 12px;
+  font-weight: bolder;
+  color: #678372;
+  font-size: x-large;
+}
+
+.Team__container--member-3 {
+  border: 2px solid #707070;
+  background-color: #FFFFFF;
+  width: 60%;
+  height: 313px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.Team__container--member-3 img {
+  position: absolute;
+  top: -100px;
+  left: 33px;
+  width: 75%;
+}
+
+.Team__container--member-3 p {
+  position: relative;
+  bottom: -122px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.Team__container--member-3 div {
+  position: relative;
+  border: 1px solid #707070;
+  border-top: 2px solid #707070;
+  height: 50px;
+  bottom: -142px;
+  background-color: #D0DDD5;
+  text-align: center;
+  padding-top: 12px;
+  font-weight: bolder;
+  color: #678372;
+  font-size: x-large;
+}
+
+.Team__container--member-4 {
+  margin-top: 20%;
+  border: 2px solid #707070;
+  background-color: #FFFFFF;
+  width: 60%;
+  height: 313px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.Team__container--member-4 img {
+  position: absolute;
+  top: -100px;
+  left: 33px;
+  width: 75%;
+}
+
+.Team__container--member-4 p {
+  position: relative;
+  bottom: -122px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.Team__container--member-4 div {
+  position: relative;
+  border: 1px solid #707070;
+  border-top: 2px solid #707070;
+  height: 50px;
+  bottom: -142px;
+  background-color: #D0DDD5;
+  text-align: center;
+  padding-top: 12px;
+  font-weight: bolder;
+  color: #678372;
+  font-size: x-large;
+}
+
+.Team__container--member-5 {
+  margin-top: 20%;
+  border: 2px solid #707070;
+  background-color: #FFFFFF;
+  width: 60%;
+  height: 313px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.Team__container--member-5 img {
+  position: absolute;
+  top: -100px;
+  left: 33px;
+  width: 75%;
+}
+
+.Team__container--member-5 p {
+  position: relative;
+  bottom: -122px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.Team__container--member-5 div {
+  position: relative;
+  border: 1px solid #707070;
+  border-top: 2px solid #707070;
+  height: 50px;
+  bottom: -142px;
+  background-color: #D0DDD5;
+  text-align: center;
+  padding-top: 12px;
+  font-weight: bolder;
+  color: #678372;
+  font-size: x-large;
+}
+
+.Team__container--member-6 {
+  margin-top: 20%;
+  border: 2px solid #707070;
+  background-color: #FFFFFF;
+  width: 60%;
+  height: 313px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.Team__container--member-6 img {
+  position: absolute;
+  top: -100px;
+  left: 33px;
+  width: 75%;
+}
+
+.Team__container--member-6 p {
+  position: relative;
+  bottom: -122px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.Team__container--member-6 div {
+  position: relative;
+  border: 1px solid #707070;
+  border-top: 2px solid #707070;
+  height: 50px;
+  bottom: -142px;
+  background-color: #D0DDD5;
+  text-align: center;
+  padding-top: 12px;
+  font-weight: bolder;
+  color: #678372;
+  font-size: x-large;
+}
+
+.Dev-membre {
+  padding: 30px;
+}
+
+.Dev-membre__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 45%);
+  grid-template-rows: 20% 70% 10%;
+  justify-content: center;
+  padding: 10px;
+}
+
+.Dev-membre__wrapper--title {
+  grid-row: 1;
+  grid-column: 1;
+  color: #698474;
+  display: flex;
+  flex-direction: row;
+  font-size: 40px;
+}
+
+.Dev-membre__wrapper--title::after {
+  content: "";
+  flex: 14% 0;
+  border-bottom: 6px solid #698474;
+  margin-top: 23px;
+  margin-bottom: auto;
+  margin-left: 22px;
+}
+
+.Dev-membre__wrapper--para {
+  grid-row: 2;
+  grid-column: 1;
+  margin-top: 6%;
+  width: 90%;
+  font-size: 18px;
+  line-height: 1.6em;
+}
+
+.Dev-membre__wrapper--img {
+  grid-row: 1/4;
+  grid-column: 2;
+  width: 92%;
+  height: 350px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 22%;
+}
+
+.Dev-membre__wrapper--btn {
+  grid-row: 3;
+  grid-column: 1;
+  border: 1px solid #678372;
+  background-color: #678372;
+  width: 200px;
+  height: 42px;
+  border-radius: 3px;
+  margin-left: 20%;
+  margin-bottom: 5%;
+}
+
+.Dev-membre__wrapper--btn a {
+  color: #FFFFFF;
+  font-weight: bolder;
+  font-size: larger;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .No-mission__container {
+    display: grid;
+    grid-template-columns: 95%;
+    grid-template-rows: 10% 1fr 1fr;
+    justify-content: center;
+  }
+  .No-mission__container--title {
+    grid-row: 1;
+    justify-content: center;
+  }
+  .No-mission__container--title::before {
+    content: "";
+    flex: 20% 0;
+    border-bottom: 8px solid #4E6A68;
+    margin-right: 10px;
+    margin-top: 24px;
+    margin-bottom: auto;
+  }
+  .No-mission__container--description {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .No-mission__container--description p {
+    text-align: center;
+    text-align: justify;
+    text-align-last: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 41px;
+  }
+  .No-mission__container--vid {
+    grid-column: 1;
+    grid-row: 2;
+    margin-top: 6px;
+  }
+  .Team {
+    background-color: #D0DDD5;
+    padding: 20px;
+  }
+  .Team__title {
+    justify-content: center;
+  }
+  .Team__container {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: center;
+    padding: 20px;
+  }
+  .Team__container--member-1 {
+    grid-row: 1;
+    grid-column: 1;
+    margin-top: 10%;
+    width: 90%;
+  }
+  .Team__container--member-1 img {
+    top: -125px;
+    left: 43px;
+    width: 72%;
+  }
+  .Team__container--member-1 p {
+    bottom: -120px;
+    font-size: 22px;
+  }
+  .Team__container--member-1 div {
+    bottom: -131px;
+  }
+  .Team__container--member-2 {
+    grid-row: 1;
+    grid-column: 2;
+    margin-top: 10%;
+    width: 90%;
+  }
+  .Team__container--member-2 img {
+    top: -125px;
+    left: 43px;
+    width: 72%;
+  }
+  .Team__container--member-2 p {
+    bottom: -120px;
+    font-size: 22px;
+  }
+  .Team__container--member-2 div {
+    bottom: -131px;
+  }
+  .Team__container--member-3 {
+    grid-row: 2;
+    grid-column: 1;
+    margin-top: 25%;
+    width: 90%;
+  }
+  .Team__container--member-3 img {
+    top: -125px;
+    left: 43px;
+    width: 72%;
+  }
+  .Team__container--member-3 p {
+    bottom: -120px;
+    font-size: 22px;
+  }
+  .Team__container--member-3 div {
+    bottom: -131px;
+  }
+  .Team__container--member-4 {
+    grid-row: 2;
+    grid-column: 2;
+    margin-top: 25%;
+    width: 90%;
+  }
+  .Team__container--member-4 img {
+    top: -125px;
+    left: 43px;
+    width: 72%;
+  }
+  .Team__container--member-4 p {
+    bottom: -120px;
+    font-size: 22px;
+  }
+  .Team__container--member-4 div {
+    bottom: -131px;
+  }
+  .Team__container--member-5 {
+    grid-row: 3;
+    grid-column: 1;
+    margin-top: 35%;
+    width: 90%;
+  }
+  .Team__container--member-5 img {
+    top: -125px;
+    left: 43px;
+    width: 72%;
+  }
+  .Team__container--member-5 p {
+    bottom: -120px;
+    font-size: 22px;
+  }
+  .Team__container--member-5 div {
+    bottom: -131px;
+  }
+  .Team__container--member-6 {
+    grid-row: 3;
+    grid-column: 2;
+    margin-top: 35%;
+    width: 90%;
+  }
+  .Team__container--member-6 img {
+    top: -125px;
+    left: 43px;
+    width: 72%;
+  }
+  .Team__container--member-6 p {
+    bottom: -120px;
+    font-size: 22px;
+  }
+  .Team__container--member-6 div {
+    bottom: -131px;
+  }
+  .Dev-membre {
+    padding: 30px;
+  }
+  .Dev-membre__wrapper {
+    display: grid;
+    grid-template-columns: 95%;
+    grid-template-rows: 10% 1fr 1fr 10%;
+    justify-content: center;
+  }
+  .Dev-membre__wrapper--title {
+    grid-row: 1;
+    text-align-last: center;
+    width: 100%;
+    justify-content: center;
+  }
+  .Dev-membre__wrapper--title::before {
+    content: "";
+    flex: 14% 0;
+    border-bottom: 6px solid #698474;
+    margin-top: 23px;
+    margin-bottom: auto;
+    margin-right: 22px;
+  }
+  .Dev-membre__wrapper--para {
+    grid-row: 3;
+    margin: auto;
+    text-align: justify;
+    text-align-last: center;
+    margin-top: 42px;
+    margin-bottom: 0;
+  }
+  .Dev-membre__wrapper--img {
+    grid-row: 2;
+    grid-column: 1;
+    width: 92%;
+    height: 350px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+  }
+  .Dev-membre__wrapper--btn {
+    grid-row: 4;
+    width: 250px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -3%;
+  }
+  .Dev-membre__wrapper--btn a {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  .No-mission__container {
+    grid-template-columns: 95%;
+    grid-template-rows: 5% 20% 1fr 10%;
+    padding: 0px;
+  }
+  .No-mission__container--title {
+    justify-content: center;
+    font-size: 32px;
+  }
+  .No-mission__container--title::before {
+    content: "";
+    flex: 0% 0;
+  }
+  .No-mission__container--title::after {
+    content: "";
+    flex: 0% 0;
+  }
+  .No-mission__container--description {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .No-mission__container--description p {
+    text-align: center;
+    text-align: justify;
+    text-align-last: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 52px;
+  }
+  .No-mission__container--vid {
+    grid-column: 1;
+    grid-row: 2;
+    width: 90%;
+    height: auto;
+    margin-top: 25px;
+  }
+  .Team {
+    background-color: #D0DDD5;
+  }
+  .Team__title {
+    justify-content: center;
+    font-size: 32px;
+  }
+  .Team__title::before {
+    content: "";
+    flex: 0% 0;
+  }
+  .Team__title::after {
+    content: "";
+    flex: 0% 0;
+  }
+  .Team__container {
+    display: grid;
+    grid-template-columns: 95%;
+    grid-template-rows: repeat(6, 1fr);
+    justify-content: center;
+    padding: 0px;
+    margin-top: 29%;
+  }
+  .Team__container--member-1 {
+    grid-row: 1;
+    grid-column: 1;
+    margin-top: 19%;
+  }
+  .Team__container--member-1 img {
+    top: -110px;
+    left: 40.5px;
+  }
+  .Team__container--member-1 p {
+    bottom: -120px;
+  }
+  .Team__container--member-1 div {
+    bottom: -131px;
+  }
+  .Team__container--member-2 {
+    grid-row: 2;
+    grid-column: 1;
+    margin-top: 24%;
+  }
+  .Team__container--member-2 img {
+    top: -110px;
+    left: 40.5px;
+  }
+  .Team__container--member-2 p {
+    bottom: -120px;
+  }
+  .Team__container--member-2 div {
+    bottom: -131px;
+  }
+  .Team__container--member-3 {
+    grid-row: 3;
+    grid-column: 1;
+    margin-top: 29%;
+  }
+  .Team__container--member-3 img {
+    top: -110px;
+    left: 40.5px;
+  }
+  .Team__container--member-3 p {
+    bottom: -120px;
+  }
+  .Team__container--member-3 div {
+    bottom: -131px;
+  }
+  .Team__container--member-4 {
+    grid-row: 4;
+    grid-column: 1;
+    margin-top: 35%;
+  }
+  .Team__container--member-4 img {
+    top: -110px;
+    left: 40.5px;
+  }
+  .Team__container--member-4 p {
+    bottom: -120px;
+  }
+  .Team__container--member-4 div {
+    bottom: -131px;
+  }
+  .Team__container--member-5 {
+    grid-row: 5;
+    grid-column: 1;
+    margin-top: 43%;
+  }
+  .Team__container--member-5 img {
+    top: -110px;
+    left: 40.5px;
+  }
+  .Team__container--member-5 p {
+    bottom: -120px;
+  }
+  .Team__container--member-5 div {
+    bottom: -131px;
+  }
+  .Team__container--member-6 {
+    grid-row: 6;
+    grid-column: 1;
+    margin-top: 50%;
+  }
+  .Team__container--member-6 img {
+    top: -110px;
+    left: 40.5px;
+  }
+  .Team__container--member-6 p {
+    bottom: -120px;
+  }
+  .Team__container--member-6 div {
+    bottom: -131px;
+  }
+  .Dev-membre {
+    padding: 0px;
+  }
+  .Dev-membre__wrapper {
+    display: grid;
+    grid-template-columns: 95%;
+    grid-template-rows: 10% 25% 1fr 10%;
+    justify-content: center;
+  }
+  .Dev-membre__wrapper--title {
+    grid-row: 1;
+    text-align-last: center;
+    justify-content: center;
+    font-size: 32px;
+  }
+  .Dev-membre__wrapper--title::before {
+    content: "";
+    flex: 0% 0;
+  }
+  .Dev-membre__wrapper--title::after {
+    content: "";
+    flex: 0% 0;
+  }
+  .Dev-membre__wrapper--para {
+    margin-top: 0px;
+    margin-bottom: 0;
+  }
+  .Dev-membre__wrapper--img {
+    width: 95%;
+    height: auto;
+    margin-top: 6%;
+  }
+  .Dev-membre__wrapper--btn {
+    grid-row: 4;
+    width: 250px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8%;
+  }
+  .Dev-membre__wrapper--btn a {
+    font-size: 20px;
+  }
+}
 
 /*# sourceMappingURL=propos.css.map */
